src/styles/styles.scss
@import 'setup';
@import 'welcomePage';
@import url('https://fonts.googleapis.com/css2?family=Baumans&family=Bungee+Shade&family=Poiret+One&display=swap');

.wrapper {
  max-width: 1600px;
  width: 90%;
  margin: 0 auto 100px;
}

.headerContainer {
  display: flex;
  flex-direction: column;
  align-items: center;
  background-image: url(../assets/headerBackground3.jpg);
  background-position: center;
  background-size: cover;
  min-height: 30vh;
  .selectContainer {
    font-size: 2rem;
    display: flex;
    flex-direction: column;
    select {
      font-family: 'Poiret One', cursive;
      font-weight: bolder;
      margin: 10px auto;
      padding: 5px;
      font-size: 2.5rem;
      border: 5px solid #e9c46a;
      background-color: #faedcd;
      color: #264653;
      border-radius: 15px;
      cursor: pointer;
    }
  }
}

.mainContentContainer {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  margin: 50px 0;
  height: 56vh;
  border: 8px solid #264653;
  border-radius: 50px;
  padding: 10px;
  overflow-y: hidden ;
  overflow-y: scroll;
  background-color: #faedcd;
}

::-webkit-scrollbar {
width: 0px;
}

.mainContainer {
  margin: 10px;
  position: relative;
  width: calc(100% / 5 - 20px);
  height: 320px;
}

.cardContainer {
  position: absolute;
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 100%;
  height: 100%;
  -webkit-transform-style: preserve-3d;
  transition: all 0.7s ease-in-out;
  &:hover {
    transform: rotateY(180deg);
    }
}

.frontOfCard,
.backOfCard{
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding: 25px;
  position: absolute;
  width: 100%;
  height: 100%;
  border-radius: 50px;
  -webkit-backface-visibility: hidden;
  border: 8px solid #264653;
}

.frontOfCard {
  background: #f4a261;
}

.backOfCard {
  background: #e9c46a;
  transform: rotateY(180deg);
}

h1 {
  font-family: 'Bungee Shade', cursive;
  font-size: 7rem;
  line-height: 1;
  margin: 140px 0 25px 0;
  color: #e9c46a;
  // width: 50%;
    svg {
      transform:translate(15%, 15%);
    }
}

h2 {
  font-family: 'Baumans', cursive;
  margin: 10px 5px;
  font-size: 2.2rem;
  text-align: center;
  color: #264653;
  z-index: 10;
}

li {
  font-family: 'Poiret One', cursive;
  font-weight: bold;
  letter-spacing: 15%;
  display: flex;
  color: #264653;
  font-size: 1.8rem;
  margin: 5px 0;
  list-style: none;
  z-index: 10;
    a {
      display: inline-block;
      text-decoration: none;
      z-index: 20;
      }
}

.url {
  font-weight: bolder;
  font-size: 2rem;
  width: 100%;
  a {
    padding-bottom: 6px;
    width: 100%;
  }
}

span {
  z-index: 20;
}

.address {
  font-size: 1.8rem;
}

.icon {
  padding-right: 20px;
  font-size: 2.5rem;
}

.beerBackground {
  position: absolute;
  width: 100%;
  height: 100%;
  left: 0;
  top: 1px;
  color: rgba(128,128,128,0.3);
  z-index: 0;
  pointer-events: none;
}

.footer {
  font-family: 'Poiret One', cursive;
  font-weight: bolder;
  margin-top: 20px;
  text-align: center;
  background-color: #faedcd;
  padding: 20px 0;
  position: fixed;
  bottom: 0;
  width: 100%;
    p {
      font-size: 1.8rem;
      color: #264653;
    }
}

@media (max-width: 1480px) {
  .mainContainer {
    width: calc(100% / 4 - 20px);
  }
}

@media (max-width: 1200px) {
  .mainContainer {
    width: calc(100% / 3 - 20px);
  }
}

@media (max-width: 880px) {
  .mainContainer {
    width: calc(100% / 2 - 20px);
  }
}

@media (max-width: 600px) {
  h1 {
    text-align: center;
  }

  .mainContainer {
    width: calc(100% / 1 - 20px);
  }
  .welcomeTxt {
    font-size: 3rem;
  }
}

